--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,19 @@
-/* تنسيق الصفحة باللغة العربية */
+
+#about img {
+
+    max-width: 20%;
+}
+
+.work-card p{
+    color: #fff;
+
+}
+.work-card  h4{
+    color: #fff;
+
+}
+
+/* */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -10,9 +25,14 @@ body {
 
 .container {
     width: min(100%, 90%);
-    max-width: 840px;
     margin: auto;
     padding: 0 15px;
+    margin: 0%;
+}
+header .container {
+    
+    width: 100%;
+    
 }
 
 /* تنسيق العنوان */
@@ -22,6 +42,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    padding-top: 0%;
 }
 
 header div {
